- #711664 neclimdul: guarantee compatibility with CTools 1.4  by declaring that
  Feeds uses hooks to define plugins via hook_ctools_plugin_plugins().
- #718460 jerdavis: In FeedsNodeProcessor, clear items only for the current
  importer id.
- #718474 jerdavis: In FeedsNodeProcessor, check for duplicate items within
  same importer id.

Feeds 6.x 1.0 Alpha 12, 2010-02-23
----------------------------------

- #600584 alex_b: PubSubHubbub support.
- alex_b: Debug log.
- alex_b: Add sourceSave() and sourceDelete() methods notifying plugin
  implementers of a source being saved or deleted.
- #717168 nicholasThompson: Fix feeds UI JS doesn't select labels correctly.
- #708228 Scott Reynolds, alex_b: Break FeedsImportBatch into separate classes.
  NOTE: Review your FeedsFetcher implementation for changes in the
  FeedsImportBatch class, small adjustments may be necessary.
- alex_b: Support mapping to OpenID, using OpenID as a unique mapping target.
- alex_b: Handle exceptions outside of Importer/Source facade methods.
- #600584 alex_b: Use Batch API.
  NOTE: third party plugins/extensions implementing FeedsProcessor::process(),
  FeedsProcessor::clear() or FeedsImporter::expire() need to adjust their
  implementations. Modules that directly use Feeds' API for importing or
  clearing sources need may want to use feeds_batch_set() instead of
  feeds_source()->import() or feeds_source()->clear().

Feeds 6.x 1.0 Alpha 11, 2010-02-10
----------------------------------

- #701432 pounard, Will White: Fix array_shift() expects parameter 1 is Array
  error. Note: Parsers are responsible to ensure that the parameter passed to
  FeedsImportBatch::setItems() is an Array.
- #698356 alex_b: Refactor and clean up FeedsScheduler::work() to allow more
  scheduled tasks than 'import' and 'expire'.

Feeds 6.x 1.0 Alpha 10, 2010-01-25
----------------------------------

- #647128 bigkevmcd, Michelle: Fix broken author info in FeedsSyndicationParser.